<resources>
    <string name="app_name">Natural</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">Loading ....</string>
    <string name="welcome_to">Welcome to</string>
    <string name="environment_comfortable_and_natural">Environment comfortable and natural</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_2">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_2">Login</string>
    <string name="enter_your_username_and_password">Enter your username and password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="map">Map</string>
    <string name="select">Select Item</string>
    <string name="title_activity_demo_nav">demoNav</string>
    <string name="graph">Graph</string>
    <string name="profile">Profile</string>
    <string name="chart">Chart</string>
    <string name="select_attribute">Select Attribute</string>
    <string name="time_frame">Time Frame</string>
    <string name="startings">Startings</string>
    <string name="engdings">Engdings</string>
    <string name="show_chart">Show Chart</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="rainfall">Rainfall</string>
    <string name="sunny">Sunny</string>
    <string name="updating">Updating</string>
    <string name="log_out">Log out</string>
    <string name="rainy">Rainy</string>
    <string name="submit">SUBMIT</string>
    <string name="username_or_email">Username or email</string>
    <string name="enter_your_username_or_email_address">Enter your username or email address</string>
    <string name="reset_password">Reset password</string>
    <string name="remembered_password">Remembered password?</string>
    <string name="received_email">You should receive an email shortly with further instructions.</string>
    <string name="please_fill_out_this_field">Please fill out this field</string>
    <string name="username_or_email_already_exists">Username or email already exists!</string>
    <string name="your_registration_was_succesful">Your registration was successful</string>
    <string name="please_confirm_your_password">Please confirm your password.</string>
    <string name="enter_password">Enter password.</string>
    <string name="please_enter_a_valid_email">Please enter a valid email!</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="the_password_you_just_entered_is_not_correct_please_re_enter">The password you just entered is not correct. Please re-enter.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="hey_it_s_going_to_rain_today_remember_to_bring_an_umbrella_when_going_out_and_be_careful_of_slippery_roads">Hey, it\'s going to rain today. Remember to bring an umbrella when going out!</string>
    <string name="hey_it_s_going_to_be_sunny_today_let_s_go_out_and_enjoy_it">Hey, your room\'s air quality is very good. The air will be fresh so let\'s enjoy it!</string>
    <string name="hey_there_will_be_moon_and_stars_tonight_let_s_enjoy_the_night_sky">Hey, the air tonight seems pleasant. Let\'s relax under the starry sky!</string>
    <string name="moon_and_star">Moon and Star</string>
    <string name="hey_your_room_seems_a_bit_hot_turn_on_the_air_conditioner_for_more_comfort">Hey, your room seems a bit hot. Turn on the air conditioner for more comfort.</string>
    <string name="hey_your_room_seems_a_bit_damp_be_careful_not_to_catch_a_cold">Hey, your room seems a bit damp. Be careful not to get fungus!</string>
    <string name="hey_your_room_seems_quite_cold_turn_up_the_air_conditioner_temperature_to_avoid_colds">Hey, your room seems quite cold. Turn up the air conditioner temperature to avoid colds.</string>
    <string name="brightness">Brightness (%)</string>
    <string name="colour_temperature_k">Colour temperature (K)</string>
    <string name="close">Close</string>
    <string name="summary_information">Summary Information</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="show_more_detail">Show more detail</string>
    <string name="light">Light</string>
    <string name="don_t_have_any_information_about_this_marker">Don\'t have any information about this marker!</string>

</resources>