<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_2"
    >
    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <ImageView
        android:id="@+id/languageIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/translate"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <ImageView
        android:id="@+id/LeftArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/left_arrow_2"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LeftArrow"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up_2"
        android:textColor="#053B47"
        android:textSize="32dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="#053B47"
        android:layout_below="@id/signUp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"/>


    <ImageView
        android:id="@+id/frame1"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textCreate"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/frame2"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/frame1"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/frame3"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/frame2"
        android:layout_marginTop="16dp"
        />

    <ImageView
        android:id="@+id/frame4"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/frame3"

        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edtUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/no_underline"
        android:ems="12"
        android:textSize="20dp"
        android:layout_below="@id/textCreate"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="60dp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/no_underline"
        android:ems="12"
        android:textSize="20dp"
        android:layout_below="@id/frame1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="60dp"
        />

    <EditText
        android:id="@+id/edtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/no_underline"
        android:ems="12"
        android:textSize="20dp"
        android:layout_below="@id/frame2"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="60dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edtCfPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/no_underline"
        android:ems="12"
        android:textSize="20dp"
        android:layout_below="@id/frame3"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="60dp"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame4"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2DBCAA"
        android:text="@string/sign_up"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="28dp"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_toRightOf="@id/txtAlready"
        android:layout_marginLeft="16dp"
        android:textColor="#2DBCAA"/>

    <WebView
        android:id="@+id/webViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>