<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:background="@drawable/background_2"
    >
    <ImageView
        android:id="@+id/languageIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/translate"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/left_arrow_2"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/resetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/left_arrow"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reset_password"
        android:textColor="#053B47"
        android:textSize="32dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_username_or_email_address"
        android:textColor="#053B47"
        android:layout_below="@id/resetPwd"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"/>


    <ImageView
        android:id="@+id/frame_1"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textEnter"
        android:layout_marginTop="60dp"/>


    <EditText
        android:id="@+id/edtUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_or_email"
        android:background="@drawable/no_underline"
        android:ems="12"
        android:textSize="20dp"
        android:layout_below="@id/textEnter"
        android:layout_marginTop="68dp"
        android:layout_marginLeft="60dp"
        />


    <Button
        android:id="@+id/submitBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2DBCAA"
        android:text="@string/submit"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remembered_password"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="28dp"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_2"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_toRightOf="@id/txtRemember"
        android:layout_marginLeft="16dp"
        android:textColor="#2DBCAA"/>

    <WebView
        android:id="@+id/webViewReset"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>