<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"

    tools:context=".FragmentGraph">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/ChartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/chart"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/selectAttribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ChartTitle"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/green"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/select_attribute"
                app:hintTextColor="@color/green">
                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/selectTimeFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectAttribute"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/green"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/time_frame"
                app:hintTextColor="@color/green">
                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txt_TimeFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

<!--        Starting Selection-->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/selectStarting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectTimeFrame"

            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutStarting"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/green"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/startings"
                app:hintTextColor="@color/green">
                <AutoCompleteTextView
                    android:id="@+id/selectStartingTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <!--        Ending Selection-->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/selectEnding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectTimeFrame"
            android:layout_toRightOf="@id/selectStarting"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEnding"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/green"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/engdings"
                app:hintTextColor="@color/green">
                <AutoCompleteTextView
                    android:id="@+id/selectEndingTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <Button
            android:id="@+id/showChartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_chart"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/green"
            android:layout_below="@id/selectStarting"
            android:layout_marginTop="16dp"
            >
        </Button>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/showChartBtn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
        </FrameLayout>

        <!--        <Button-->
        <!--            android:id="@+id/datePickerButton"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_toRightOf="@id/selectTimeFrame"-->
        <!--            android:layout_below="@+id/selectAttribute"-->
        <!--            android:text="JAN 01 2023"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:backgroundTint="@android:color/transparent"-->
        <!--            app:cornerRadius = "0dp"-->
        <!--            style="?android:spinnerStyle"-->
        <!--            android:onClick="openDatePicker"-->
        <!--            />-->




        <!--        <TextView-->
        <!--            android:id="@+id/selectTxt"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Select Attribute"-->
        <!--            android:textColor="@color/grey"-->
        <!--            android:layout_below="@+id/backBtn"-->
        <!--            android:layout_marginLeft="60dp"-->
        <!--            />-->




    </RelativeLayout>


</FrameLayout>